force-app/main/default/objects/Question_Answer__c/Question_Answer__c.object-meta.xml
<CustomObject>
    <label>Question Answer</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>