force-app/main/default/objects/Question_Answer__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipName>Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>