force-app/main/default/objects/Question_Answer__c/fields/Unit_History__c.field-meta.xml
<CustomField>
    <fullName>Unit_History__c</fullName>
    <label>Unit History</label>
    <referenceTo>Unit_History__c</referenceTo>
    <relationshipLabel>Question Answer</relationshipLabel>
    <relationshipName>Question_Answer</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>