force-app/main/default/objects/Question_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit_History__c</columns>
    <columns>Question__c</columns>
    <columns>Description__c</columns>
    <columns>Option__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>